--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
                         </ul>
                     </div>
                     <div id="right">
-                        <span class="material-icons md-24">
+                        <div class="material-icons md-36">
                             apps
-                        </span>
-                        <span class="material-icons md-36">
+                        </div>
+                        <div class="material-icons md-36">
                             account_circle
-                        </span>
+                        </div>
                         
                     </div>
                 </div>
             </div>
-            <div class="main-logo"></div>
+            <div class="main-logo">
+                
+            </div>
             <div class="search-input"></div>
             <div></div>
             <div class="footer"></div>
